--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1{
 text-align:center;
 margin-top: 0px;
 margin-bottom: 0px;
-border width:  2px;
+border-width:  2px;
 
 border-radius: 50px;
 padding top: 2px;
